force-app/main/default/objects/IDR_Email_Settings__c/IDR_Email_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used in IDREmailService to check spam and update case origin depending upon the email address</description>
    <label>IDR Email Settings</label>
</CustomObject>