force-app/main/default/objects/IDR_Email_Settings__c/fields/Inbox_Email__c.field-meta.xml
<CustomField>
    <fullName>Inbox_Email__c</fullName>
    <description>Stores the email service sender email address</description>
    <label>Inbox Email</label>
    <type>TextArea</type>
</CustomField>