force-app/main/default/objects/IDR_Email_Settings__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>Stores the General Inquiry CMOS case Origin</description>
    <label>Origin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>