force-app/main/default/objects/IDR_Email_Settings__c/fields/Technical_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Technical_Email_Address__c</fullName>
    <description>Stores the Salesforce technical email address</description>
    <label>Technical Email Address</label>
    <type>TextArea</type>
</CustomField>